Revert "Fix header alignment and title font size"
This reverts commit 4cf6a1311ec4708309a0dec26c7b3b67039d5153.

--- a/header.css
+++ b/header.css
@@ -17,21 +17,22 @@ nav a:hover {
 
 .header-logo {
     display: flex;
-}
-
-.header-logo > h1 {
-    margin: auto 10px;
     font-size: 24px;
     color: #f9faf8;
+
+    margin: 0;
 }
 
 .img-logo {
-    height: 50px;
-    padding-bottom: 10px;
+    height: 80px;
 }
 
 .header-links {
     display: flex;
     justify-content: space-evenly;
-    margin: auto 0;
+    margin: auto;
+}
+
+.header-links a {
+
 }
